use "website" instead of "wiki"

--- a/development/meeting/20121114.md
+++ b/development/meeting/20121114.md
@@ -19,7 +19,7 @@ tags: [meeting]
 
 - we are all happy.
 
-- templates: there are data which we release together with FieldTrip. It is not always clear where it came from, why it is how it is. layouts have also been changed without notification. -> describe template data on wiki (fieldtrip.fcdonders.nl/template). Wiki page has the same layout as template directory in FieldTrip. tutorial/layout: Example layouts -> Template layouts, it should go under the template wiki page. For every file, which is in the template directory it should be specified where it came from and changes should be documented and users should be notified. Bitmap (or jpg,png" %} can be also moved to the wiki, and not having it under FT release.
+- templates: there are data which we release together with FieldTrip. It is not always clear where it came from, why it is how it is. layouts have also been changed without notification. -> describe template data on wiki (fieldtrip.fcdonders.nl/template). Wiki page has the same layout as template directory in FieldTrip. tutorial/layout: Example layouts -> Template layouts, it should go under the template wiki page. For every file, which is in the template directory it should be specified where it came from and changes should be documented and users should be notified. Bitmap (or jpg,png" %} can be also moved to the website, and not having it under FT release.
 
 - Where to put info about template? not all directories are modules: template directory is not a module. It could go under user documentation.
 
