--- a/development/meeting/20151005.md
+++ b/development/meeting/20151005.md
@@ -19,4 +19,4 @@ tags: [meeting]
 
 - Tzvetan will add the 4D auditory data to the faq and ftp
 
-- Luca will write an example script on the wiki explaining frequency domain MNE
+- Luca will write an example script on the website explaining frequency domain MNE
