--- a/_posts/2019-11-23-entropy.md
+++ b/_posts/2019-11-23-entropy.md
@@ -1,5 +1,5 @@
 ---
-title: 23 November, 2019 - Multiscale Entropy analysis in Fieldtrip
+title: 23 November, 2019 - Multiscale Entropy analysis in FieldTrip
 categories: [news]
 ---
 
