--- a/development/meeting/20140709.md
+++ b/development/meeting/20140709.md
@@ -16,4 +16,4 @@ tags: [meeting]
 
 #### Minutes
 
-Jorn and Robert had separate meeting for the Focom project, and made some plans on how to support joint EEG-NIRS recordings. In short: it can best be done by extending the buffer with a (separate) timestamp channel, which takes the CPU clock as timestamps. Also ft_read_header and ft_read_data have to be updated to read the timestamps. The (identical) timestamps in two buffers facilitate data merging. Note however that at this moment it is not on our priority list.
+Jörn and Robert had separate meeting for the Focom project, and made some plans on how to support joint EEG-NIRS recordings. In short: it can best be done by extending the buffer with a (separate) timestamp channel, which takes the CPU clock as timestamps. Also ft_read_header and ft_read_data have to be updated to read the timestamps. The (identical) timestamps in two buffers facilitate data merging. Note however that at this moment it is not on our priority list.
