--- a/development/meeting/20140423.md
+++ b/development/meeting/20140423.md
@@ -8,21 +8,13 @@ tags: [meeting]
 ### Agenda
 
 - shiftpredict and its future (Jörn)
-
 - Brain stimulation toolkit (Jim)
-
 - some questions before Parma workshop (Diego)
-
 - shortly talk about bug 2523 for Eelke and keeping Eelke up to date about this agenda and the necessity to fill this in ;)
 
 ### Minutes
 
-- jorn will "update" shiftpredict to make it work, trying to keep it modular so that it may later be plugged into ?ft_connectivityanalysis/ft_connectivity_statistics?
-
+- Jörn will "update" shiftpredict to make it work, trying to keep it modular so that it may later be plugged into ?ft_connectivityanalysis/ft_connectivity_statistics?
 - Jim's point is postponed to next meeting when there is a bigger attendance
-
 - Eelke is postponed till next meeting to ;)
-
 - ft_sourceplot figure visibility forcing will be removed by Roemer
-
--
