--- a/_posts/2019-12-12-practialmeeg2019.md
+++ b/_posts/2019-12-12-practialmeeg2019.md
@@ -1,11 +1,11 @@
 ---
 title: 12 December, 2019 - PracticalMEEG 2019
-categories: [news]
+categories: []
 ---
 
 ### 12 December, 2019
 
-Last week at the PracticalMEEG workshop in Paris, Robert, Jan Mathijs and Stephen presented FieldTrip alongside [MNE](https://mne.tools/dev/index.html) and [Brainstorm](https://neuroimage.usc.edu/brainstorm/). You can find all the tutorials - including links to the corresponding tutorials for MNE=-Python and BrainStorm - on the [workshop page](/workshop/paris2019). 
+Last week at the PracticalMEEG workshop in Paris, Robert, Jan Mathijs and Stephen presented FieldTrip alongside [MNE](https://mne.tools/dev/index.html) and [Brainstorm](https://neuroimage.usc.edu/brainstorm/). You can find all the tutorials - including links to the corresponding tutorials for MNE=-Python and BrainStorm - on the [workshop page](/workshop/paris2019).
 
 The tutorials showcase a full group analysis of the "mmfaces" dataset, starting with raw data organized in BIDS, and going all the way to source-level group statistics.
 
