--- a/_posts/2020-04-09-toolkit.md
+++ b/_posts/2020-04-09-toolkit.md
@@ -1,6 +1,6 @@
 ---
 title: 9 April 2020 - M/EEG toolkit online
-categories: [news, toolkit2020]
+categories: [toolkit2020]
 ---
 
 ### 9 April, 2020
