made the tags more consistent

--- a/getting_started/1020.md
+++ b/getting_started/1020.md
@@ -1,6 +1,6 @@
 ---
 title: Getting started with 20%, 10% and 5% electrode arrangements
-tags: [eeg, dataformat, layout]
+tags: [eeg, layout]
 ---
 
 ### Getting started with 20%, 10% and 5% electrode arrangements
