added news item for release

--- a/_posts/2020-08-20-release.md
+++ b/_posts/2020-08-20-release.md
@@ -1,7 +1,7 @@
 ---
 title: 20 August 2020 - FieldTrip version 20200820 has been released
 categories: [news, release]
-tweeted: false
+tweet: FieldTrip version 20200820 was just released. See http://www.fieldtriptoolbox.org/#20-August-2020
 ---
 
 ### 20 August, 2020
