removed the news tag so that it does not appear on the FT homepage

--- a/_posts/2020-08-20-release.md
+++ b/_posts/2020-08-20-release.md
@@ -1,6 +1,6 @@
 ---
 title: 20 August 2020 - FieldTrip version 20200820 has been released
-categories: [news, release]
+categories: [release]
 tweet: FieldTrip version 20200820 was just released. See http://www.fieldtriptoolbox.org/#20-August-2020
 ---
 
