--- a/_posts/2020-08-26-release.md
+++ b/_posts/2020-08-26-release.md
@@ -1,9 +1,9 @@
 ---
 title: 26 August 2020 - FieldTrip version 20200826 has been released
 categories: [news, release]
-tweet: We just released FieldTrip version 20200828, featuring improved support for SLURM clusters! Check http://www.fieldtriptoolbox.org/#26-August-2020 for more details. BIG Thanks to Mike from the @mpib_berlin for his contribution! #githubiscool #opensourceiscool
+tweet: We just released FieldTrip version 20200826, featuring improved support for SLURM clusters! Check http://www.fieldtriptoolbox.org/#26-August-2020 for more details. BIG Thanks to Mike from the @mpib_berlin for his contribution! #githubiscool #opensourceiscool
 ---
 
 ### 26 August, 2020
 
-FieldTrip version [20200826](http://github.com/fieldtrip/fieldtrip/releases/tag/20200826) has been released, featuring improved support for SLURM clusters. See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20200828...20200826) for the detailled list of updates. We would like to thank [Mike](https://github.com/octomike) at the MPI in Berlin for their contribution!
+FieldTrip version [20200826](http://github.com/fieldtrip/fieldtrip/releases/tag/20200826) has been released, featuring improved support for SLURM clusters. See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20200821...20200826) for the detailled list of updates. We would like to thank [Mike](https://github.com/octomike) at the MPI in Berlin for his contribution!
