added human readable summary to news item

--- a/_posts/2020-09-11-release.md
+++ b/_posts/2020-09-11-release.md
@@ -1,46 +1,9 @@
 ---
 title: 11 September 2020 - FieldTrip version 20200911 has been released
 categories: [news, release]
-tweet: FieldTrip version 20200911 was just released. See http://www.fieldtriptoolbox.org/#11-September-2020
+tweet: FieldTrip version 20200911 was just released, now with support for SNIRF and other NIRS improvements. See http://www.fieldtriptoolbox.org/#11-September-2020
 ---
 
 ### 11 September, 2020
 
-FieldTrip version [20200911](http://github.com/fieldtrip/fieldtrip/releases/tag/20200911) has been released.
-See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20200831...20200911) for the detailled list of updates.
-
-#### Commits
-
-- [4a7bc1c](http://github.com/fieldtrip/fieldtrip/commit/4a7bc1c) automatically synchronized identical files to 327f2ca864e9a9cc084b752bf713aaa8f23f21b0
-- [327f2ca](http://github.com/fieldtrip/fieldtrip/commit/327f2ca) FIX - reggression error due to stricter checking of freq.label, it can also be that there is no freq.label but freq.labelcmb
-- [f0fe414](http://github.com/fieldtrip/fieldtrip/commit/f0fe414) write NIRS data to SNIRF format when converting
-- [0f79f88](http://github.com/fieldtrip/fieldtrip/commit/0f79f88) small improvement to Jekyll "include image"
-- [e3304e8](http://github.com/fieldtrip/fieldtrip/commit/e3304e8) automatically synchronized identical files to 5cd72c61e4dcda82dc6ae7f1401aa2a27dea8a2f
-- [5cd72c6](http://github.com/fieldtrip/fieldtrip/commit/5cd72c6) Merge pull request #1542 from robertoostenveld/issue1541
-- [f1415a9](http://github.com/fieldtrip/fieldtrip/commit/f1415a9) ENH - improve error handling in case of inconsistent input data
-- [9325f6e](http://github.com/fieldtrip/fieldtrip/commit/9325f6e) Merge branch 'master' of github.com:robertoostenveld/fieldtrip
-- [50feab1](http://github.com/fieldtrip/fieldtrip/commit/50feab1) FIX - fixed some regreession errors in NIRS handling and ft_dataype_sens - these were mainly due to the code now checking more strictly on datatypes, whereas sometimes the data (on disk) is a bit more sloppy
-- [8eef7ed](http://github.com/fieldtrip/fieldtrip/commit/8eef7ed) Merge branch 'master' of github.com:fieldtrip/fieldtrip
-- [d2b2d6e](http://github.com/fieldtrip/fieldtrip/commit/d2b2d6e) automatically synchronized identical files to d57be1e351e535fa3883f2ec00d10f178971a50c
-- [d57be1e](http://github.com/fieldtrip/fieldtrip/commit/d57be1e) Merge pull request #1540 from robertoostenveld/homer
-- [1ceab22](http://github.com/fieldtrip/fieldtrip/commit/1ceab22) compare the data as much as possible, there are still some differences
-- [2278569](http://github.com/fieldtrip/fieldtrip/commit/2278569) added comment, nothing functional
-- [3ee2cbe](http://github.com/fieldtrip/fieldtrip/commit/3ee2cbe) use S-D channel labels rather than D-S, improved detection of (optional) events
-- [d4c8181](http://github.com/fieldtrip/fieldtrip/commit/d4c8181) also support events when writing NIRS data to snirf
-- [31b0031](http://github.com/fieldtrip/fieldtrip/commit/31b0031) updated comment, nothing functional
-- [19571c8](http://github.com/fieldtrip/fieldtrip/commit/19571c8) also support conversion of FT event structure to Homer nirs.s representation
-- [79ee587](http://github.com/fieldtrip/fieldtrip/commit/79ee587) implemented another conversion for artifact2artvec
-- [daa773a](http://github.com/fieldtrip/fieldtrip/commit/daa773a) use S and D instead of Tx and Rx
-- [32ef5c6](http://github.com/fieldtrip/fieldtrip/commit/32ef5c6) allow either Rx/Tx and S/D, and also swapped
-- [5a424d2](http://github.com/fieldtrip/fieldtrip/commit/5a424d2) made the code for writing data and events more consistent
-- [9bcee07](http://github.com/fieldtrip/fieldtrip/commit/9bcee07) updated help, no functional changes
-- [11483e6](http://github.com/fieldtrip/fieldtrip/commit/11483e6) implemented snirf2opto and added optode definition to the SNIRF header
-- [244b41c](http://github.com/fieldtrip/fieldtrip/commit/244b41c) rename channels Tx and Rx tro S and D to be more consistent with Homer and SNIRF terminology
-- [856bf36](http://github.com/fieldtrip/fieldtrip/commit/856bf36) implemented exporting NIRS data to the Snirf file format
-- [a785359](http://github.com/fieldtrip/fieldtrip/commit/a785359) improve selection of aux channels
-- [afd6923](http://github.com/fieldtrip/fieldtrip/commit/afd6923) flip the sign for transmitters and receivers in opto.tra
-- [287de90](http://github.com/fieldtrip/fieldtrip/commit/287de90) FIX the wavelength assigmnent was not correct
-- [e01599e](http://github.com/fieldtrip/fieldtrip/commit/e01599e) detect snirf file format also when writing files
-- [b7cb99a](http://github.com/fieldtrip/fieldtrip/commit/b7cb99a) implemented homer2fieldtrip and fieldtrip2homer
-- [50642c3](http://github.com/fieldtrip/fieldtrip/commit/50642c3) copied missing functions to fileio/private
-- [bfcaea9](http://github.com/fieldtrip/fieldtrip/commit/bfcaea9) made the naming of Neuromag/Elekta/Megin more consistent
+FieldTrip version [20200911](http://github.com/fieldtrip/fieldtrip/releases/tag/20200911) has been released. This includes improvements for reading and writing SNIRF data, converting data in Homer format and other improvements for NIRS data. See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20200831...20200911) for the detailled list of updates. See also [getting started with NIRS](http://www.fieldtriptoolbox.org/getting_started/#getting-started-with-nirs-data) for updated documentation.
