--- a/_posts/2019-11-23-entropy.md
+++ b/_posts/2019-11-23-entropy.md
@@ -1,6 +1,6 @@
 ---
 title: 23 November, 2019 - Multiscale Entropy analysis in FieldTrip
-categories: []
+categories: [news]
 ---
 
 ### 23 November, 2019
