--- a/_posts/2020-01-20-toolkit2020.md
+++ b/_posts/2020-01-20-toolkit2020.md
@@ -1,6 +1,6 @@
 ---
 title: 20 January, 2020 - Advanced MEG/EEG toolkit in Nijmegen
-categories: []
+categories: [news]
 ---
 
 ### 20 January, 2020
