TYPOFIX in news item

--- a/_posts/2020-09-19-release.md
+++ b/_posts/2020-09-19-release.md
@@ -6,4 +6,4 @@ tweet: FieldTrip version 20200919 was just released with updates to the BIDS fun
 
 ### 19 September, 2020
 
-FieldTrip version [20200919](http://github.com/fieldtrip/fieldtrip/releases/tag/20200919) has been released. Besides some bug fixes, this includes updates to the BIDS data handling, the readingf functions will now by default read the `channels.tsv` and `events.tsv` files when present. See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20200914...20200919) for the detailled list of updates.
+FieldTrip version [20200919](http://github.com/fieldtrip/fieldtrip/releases/tag/20200919) has been released. Besides some bug fixes, this includes updates to the BIDS data handling, the reading functions will now by default read the `channels.tsv` and `events.tsv` files when present. See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20200914...20200919) for the detailed list of updates.
