--- a/_posts/2020-08-20-release.md
+++ b/_posts/2020-08-20-release.md
@@ -1,7 +1,7 @@
 ---
 title: 20 August 2020 - FieldTrip version 20200820 has been released
 categories: [release]
-tweet: FieldTrip version 20200820 was just released. See https://www.fieldtriptoolbox.org/#20-august-2020
+tweet: FieldTrip version 20200820 was just released. See http://www.fieldtriptoolbox.org/#20-august-2020
 ---
 
 ### 20 August, 2020
