--- a/_posts/2020-09-19-release.md
+++ b/_posts/2020-09-19-release.md
@@ -1,7 +1,7 @@
 ---
 title: 19 September 2020 - FieldTrip version 20200919 has been released
 categories: [release]
-tweet: FieldTrip version 20200919 was just released with updates to the BIDS functions. Check the latest and greatest at https://www.fieldtriptoolbox.org/#19-september-2020
+tweet: FieldTrip version 20200919 was just released with updates to the BIDS functions. Check the latest and greatest at http://www.fieldtriptoolbox.org/#19-september-2020
 ---
 
 ### 19 September, 2020
