--- a/_posts/2020-12-14-release.md
+++ b/_posts/2020-12-14-release.md
@@ -6,4 +6,4 @@ tweet: FieldTrip version 20201214 was just released, with a new template atlas a
 
 ### 14 December, 2020
 
-FieldTrip version [20201214](http://github.com/fieldtrip/fieldtrip/releases/tag/20201214) has been released. Apart from a few small changes, this version now contains an anatomical atlas for subcortical structures. Thanks to @neurofractal, we now have easy support for the [Melbourne Subcortical atlas](https://doi.org/10.1038/s41593-020-00711-6), which can be found in `fieldtrip/template/atlas`. See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20201126...20201214) for the detailed list of updates.
+FieldTrip version [20201214](http://github.com/fieldtrip/fieldtrip/releases/tag/20201214) has been released. Apart from a few small changes, this version now contains an anatomical atlas for subcortical structures. Thanks to [neurofractal](https://github.com/neurofractal), we now have easy support for the [Melbourne Subcortical atlas](https://doi.org/10.1038/s41593-020-00711-6), which can be found in `fieldtrip/template/atlas`. See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20201126...20201214) for the detailed list of updates.
