--- a/_posts/2020-12-18-mats-phd.md
+++ b/_posts/2020-12-18-mats-phd.md
@@ -10,4 +10,4 @@ Yesterday Mats van Es defended his PhD thesis "On the role of oscillatory synchr
 
 Mats not only used FieldTrip in a number of interesting MEG studies, but also contributed as lecturer in the MEG toolkit courses. Furthermore, he recently implemented the `reproducescript` functionality (which will be published soon). He continues his research at the [MEG center in Oxford](https://www.win.ox.ac.uk).
 
-{% include image src="/assets/img/posts/mats-phd.png" width="500" %}
+{% include image src="/assets/img/posts/mats-phd.jpg" width="500" %}
