--- a/_posts/2021-04-09-release.md
+++ b/_posts/2021-04-09-release.md
@@ -7,7 +7,7 @@ tweet: FieldTrip version 20210409 was just released. See http://www.fieldtriptoo
 ### 09 April, 2021
 
 FieldTrip version [20210409](http://github.com/fieldtrip/fieldtrip/releases/tag/20210409) has been released.
-See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20210330...20210409) for the detailed list of updates.
+See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20210330...20210409) for the detailed list of updates. There's an important fix to ft_statistics_montecarlo, which restores the correct functionality of the cfg.clusteralpha option, which was accidentally broken with commit 205c75d. This affects releases that were released between March 25, and March 30. See issue (#1731) for more information.
 
 #### Commits
 
