--- a/_posts/2021-06-09-release.md
+++ b/_posts/2021-06-09-release.md
@@ -6,4 +6,4 @@ tweet: FieldTrip version 20210609 was just released with support for the York In
 
 ### 09 June, 2021
 
-FieldTrip version [20210609](http://github.com/fieldtrip/fieldtrip/releases/tag/20210609) has been released. It now includes support for the York Instrument 4D hybrid MEG system, thanks to [Richard Aveyard](https://github.com/RA-Neuro)!. See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20210529...20210609) for the detailed list of updates.
+FieldTrip version [20210609](http://github.com/fieldtrip/fieldtrip/releases/tag/20210609) has been released. It now includes support for the York Instrument 4D hybrid MEG system, thanks to [Richard Aveyard](https://github.com/RA-Neuro)! See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20210529...20210609) for the detailed list of updates.
