--- a/_posts/2021-09-04-release.md
+++ b/_posts/2021-09-04-release.md
@@ -6,4 +6,4 @@ tweet: FieldTrip version 20210904 was just released with added FOOOF (fitting os
 
 ### 04 September, 2021
 
-FieldTrip version [20210904](http://github.com/fieldtrip/fieldtrip/releases/tag/20210904) has been released with **[ft_freqanalysis](https://github.com/fieldtrip/fieldtrip/blob/master/ft_freqanalysis.m)** now also supporting FOOOF (fitting oscillations and one-over-f) functionality. See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20210825...20210904) for the detailed list of updates.
+FieldTrip version [20210904](http://github.com/fieldtrip/fieldtrip/releases/tag/20210904) has been released with **[ft_freqanalysis](https://github.com/fieldtrip/fieldtrip/blob/master/ft_freqanalysis.m)** now also supporting FOOOF (fitting oscillations and one-over-f) functionality. You can find an example for FOOOF [here](/example/fooof). See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20210825...20210904) for the detailed list of updates.
