--- a/_posts/2021-10-05-cuttingeeg2021.md
+++ b/_posts/2021-10-05-cuttingeeg2021.md
@@ -1,10 +1,11 @@
 ---
 title: 05 October, 2021 - CuttingEEG2021
 categories: [news]
+tweet: CuttingEEG2021 is currently on in Aix-en-Provence! It's great to meet in real life again. The FieldTrip team did a hands-on training on site about frequency analysis. See https://www.fieldtriptoolbox.org/workshop/cuttingeeg2021/
 ---
 
 ### 05 October, 2021
 
-This week [CuttingEEG2021](https://cuttingeeg2021.org) is taking place as a (in part) real life event, in Aix-en-Provence. Robert and Jan-Mathijs presented a hands-on training to spectrally analyse EEG data on short and long time scales. To this end, we created a brandnew tutorial that also highlights the relative new feature to represent trls and trialinfo fields as tables. The latter feature relies on data being represented in the BIDS-format. Feel free to check out this new tutorial about [time-frequency analysis on short and long timescales](https://www.fieldtriptoolbox.org/workshop/cuttingeeg2021/tutorial_freq/).
+This week [CuttingEEG2021](https://cuttingeeg2021.org) is taking place as a (in part) real life event, in Aix-en-Provence. Robert and Jan-Mathijs presented a hands-on training to spectrally analyse EEG data on short and long time scales. To this end, we created a brandnew tutorial that also highlights the relatively new feature to represent trls and trialinfo fields as tables. The latter feature relies on data being represented in the BIDS-format. Feel free to check out this new tutorial about [time-frequency analysis on short and long timescales](https://www.fieldtriptoolbox.org/workshop/cuttingeeg2021/tutorial_freq/).
 
 {% include image src="/assets/img/posts/cuttingEEG2021.jpg" width="300" %}
