--- a/_posts/2021-11-18-release.md
+++ b/_posts/2021-11-18-release.md
@@ -1,7 +1,7 @@
 ---
 title: 18 November 2021 - FieldTrip version 20211118 has been released
 categories: [release]
-tweet: FieldTrip version 20211118 was just released with support for the oxy5 fNIRS files from @Artinis_MS, various small bug fixes, improvements, and most importantly: some cool ASCII art upon start-up. See http://www.fieldtriptoolbox.org/#18-november-2021
+tweet: FieldTrip version 20211118 was just released with support for the oxy5 fNIRS files from @Artinis_MS, various small bug fixes, improvements, and most importantly some cool ASCII art upon start-up. See http://www.fieldtriptoolbox.org/#18-november-2021
 ---
 
 ### 18 November, 2021
