created some content
something like this?

--- a/_posts/2022-03-10-release.md
+++ b/_posts/2022-03-10-release.md
@@ -6,14 +6,4 @@ tweet: FieldTrip version 20220310 was just released. See http://www.fieldtriptoo
 
 ### 10 March, 2022
 
-FieldTrip version [20220310](http://github.com/fieldtrip/fieldtrip/releases/tag/20220310) has been released.
-See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20220304...20220310) for the detailed list of updates.
-
-#### Commits
-
-- [b381383](http://github.com/fieldtrip/fieldtrip/commit/b381383) ENH - added event structure in the output, if possible (#2001)
-- [12ba683](http://github.com/fieldtrip/fieldtrip/commit/12ba683) FIX - improved robustness if voxels are not isotropic (#2000)
-- [806df42](http://github.com/fieldtrip/fieldtrip/commit/806df42) automatically synchronized identical files to 2c6b334ff9708ece51531c9729dde66efa51a550
-- [2c6b334](http://github.com/fieldtrip/fieldtrip/commit/2c6b334) Merge pull request #1999 from schoffelen/sourceplot
-- [78c55d0](http://github.com/fieldtrip/fieldtrip/commit/78c55d0) ENH - add referential marker in ortho if input has meaningful coordsys
-- [b29b79c](http://github.com/fieldtrip/fieldtrip/commit/b29b79c) FIX - cranked up memory requirements because of out of memory dashboard failure
+FieldTrip version [20220310](http://github.com/fieldtrip/fieldtrip/releases/tag/20220310) has been released. There are some minor improvements to [edf2fieldtrip](https://github.com/fieldtrip/website/blob/master/reference/edf2fieldtrip.md), which now returns an event structure (if possible), and to [ft_sourceplot](https://github.com/fieldtrip/website/blob/master/reference/ft_sourceplot.md). The latter function now can tell the difference between Left and Right (given appropriate input), and displays the data with the upside up, avoiding [Mister Potatohead situations](https://www.fieldtriptoolbox.org/faq/my_mri_is_upside_down_is_this_a_problem/). See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20220304...20220310) for the detailed list of updates.
