removed the trailing slash for all internal URL links

--- a/_posts/2022-03-10-toolkit.md
+++ b/_posts/2022-03-10-toolkit.md
@@ -10,4 +10,4 @@ From May 9-13 we will host the MEG/EEG FieldTrip data analysis toolkit at the Do
 
 We hope and expect that we will be able to teach this toolkit on site.
 
-See the [toolkit2022](/workshop/toolkit2022/) page for further details.
+See the [toolkit2022](/workshop/toolkit2022) page for further details.
