add plausible code to track errors

--- a/error/401.md
+++ b/error/401.md
@@ -6,3 +6,5 @@ permalink: /401.html
 # Unauthorized
 
 The requested page needs a username and a password.
+
+<script>plausible("401",{ props: { path: document.location.pathname } });</script>
