--- a/error/404.md
+++ b/error/404.md
@@ -6,3 +6,5 @@ permalink: /404.html
 # Not Found
 
 The server can not find the requested page.
+
+<script>plausible("404",{ props: { path: document.location.pathname } });</script>
