--- a/error/405.md
+++ b/error/405.md
@@ -6,3 +6,5 @@ permalink: /405.html
 # Method Not Allowed
 
 The method specified in the request is not allowed.
+
+<script>plausible("405",{ props: { path: document.location.pathname } });</script>
