--- a/error/408.md
+++ b/error/408.md
@@ -6,3 +6,5 @@ permalink: /408.html
 # Request Timeout
 
 The request took longer than the server was prepared to wait.
+
+<script>plausible("408",{ props: { path: document.location.pathname } });</script>
