more edits related to #532 (ftp->webdav)

--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -88,10 +88,9 @@ You can download the data from our [download server](https://download.fieldtript
 
 ## Installing FieldTrip and setting up MATLAB
 
-For the hands-on sessions you have to start MATLAB. To ensure that everything
-runs smooth, we will work with a clean version of FieldTrip from the ftp
+For the hands-on sessions you have to start MATLAB. To ensure that everything runs smooth, we will work with a clean version of FieldTrip from the download server.
 
-1.  Download all the files from the FTP server, please keep the same directory structure (i.e. split over hands-on sessions)
+1.  Download all the files, please keep the same directory structure (i.e. split over hands-on sessions)
 2.  Unzip `fieldtrip.zip` file to the folder where you usually keep your MATLAB packages
 3.  Unzip `dicom.zip` into a folder called dicom, which should be in the same directory where you keep the other data files (from step 1)
 
