--- a/workshop/baci2017.md
+++ b/workshop/baci2017.md
@@ -26,7 +26,7 @@ _We will start at 9:00 sharp and will finish around 17:30._
 
 | 09:00-09:30 | Welcome                                                                                                                           |
 | ----------- | --------------------------------------------------------------------------------------------------------------------------------- |
-| 09:30-10:30 | Lecture [Preprocessing](http:/ftp.fieldtriptoolbox.org/pub/fieldtrip/workshop/baci2017/antonakakis_preprocessing_29_08_2017.pptx) |
+| 09:30-10:30 | Lecture [Preprocessing](https:/download.fieldtriptoolbox.org/workshop/baci2017/antonakakis_preprocessing_29_08_2017.pptx)         |
 | 10:30-10:45 | Coffee break                                                                                                                      |
 | 10:45-11:30 | Hands on - [Preprocessing](/workshop/baci2017/preprocessing)                                                                      |
 | 11:30-12:30 | Lecture - Forward problem                                                                                                         |
@@ -50,11 +50,7 @@ Please do NOT use the graphical path management tool from MATLAB. In this hands-
 Please do NOT add FieldTrip with all subdirectories, subdirectories will be added automatically when needed, and only when needed.
 {% include markup/end %}
 
-The `restoredefaultpath` command clears your path, keeping only the
-official MATLAB toolboxes. The `addpath(pwd)` statement adds the
-present working directory, i.e. the directory containing the fieldtrip
-main functions. The `ft_defaults` command ensures that all required
-subdirectories are added to the path.
+The `restoredefaultpath` command clears your path, keeping only the official MATLAB toolboxes. The `addpath(pwd)` statement adds the present working directory, i.e. the directory containing the fieldtrip main functions. The `ft_defaults` command ensures that all required subdirectories are added to the path.
 
 If you get the error "can't find the command ft_defaults" you should check the present working directory.
 
