added description of experimental paradigm and possible ideas for short projects

--- a/workshop/bcbt2022.md
+++ b/workshop/bcbt2022.md
@@ -22,6 +22,24 @@ The conversion of the 5 pilot subjects' EEG data to BIDS is fully documented on 
 
 The "minimal" dataset (~260MB) contains one subject and is enough to run the tutorial. The "pilot" dataset (~1.7GB) contains all 5 subjects used for the pilot analysis in the original paper; you can use that if you want to explore other subjects with this tutorial.
 
+### Experimental paradigm
+
+EEG data was recorded while participants attended the stimuli corresponding to concepts from three semantic categories: two categories that were relevant for the main analysis in the original study (animals, tools) and a response task category that varied across subjects (either clothing or vegetables). There were four exemplars per category. All exemplars were presented in three modalities: auditory (spoken Dutch words recorded digitally at 16 bits with a sampling rate of 44.100 Hz), visual (black line drawings on white background) [38] and orthographical (written Dutch words, black letters on white background). Pictures were matched for familiarity and complexity. Each of the relevant items was repeated eighty times in each modality. Task items were repeated sixteen times and shown approximately once per ten relevant items.
+
+The recorded brain activity includes visual, orthographic, and auditory activity (for the modalities), and semantic activity (for the categories). Furthermore, the task condition includes motor preparation and execution.
+
+## Possible ideas for short projects
+
+- Classification of trials between stimulus type (visual and auditory)
+- Classification of trials between modalities (picture, text, spoken)
+- Classification of trials between categories (animals, tools)
+- Identification of temporal activation sequence (from sensory to conceptual)
+- Identification of temporal activation sequence in the task data (from sensory to conceptual to motor)
+- Identification of shared semantic representation between modalities
+- Localization of sources corresponding to sensory, conceptual and/or motor activity
+- Identification of cortical network (from sensory to conceptual)
+- Identification of cortical network in the task data (from sensory to conceptual to motor)
+
 ## Getting started with the hands-on session
 
 {% include markup/danger %}
