--- a/workshop/bcbt2022.md
+++ b/workshop/bcbt2022.md
@@ -10,6 +10,12 @@ tags: [bcbt2022]
 - Where: Nijmegen
 - See <https://bcbt.specs-lab.com/bcbt22/about/> for more details
 
+In this tutorial, which runs over two afternoons (Tue 7 and Wed 8 September) in the first week of the DCBT school, we will give an introduction to EEG and MEG data, its neuronal generators and how it is recorded. Subsequently, we will explain how to use the FieldTrip toolbox to analyze the data with different levels of sopohistication. 
+
+On Tuesday afternoon the focus will be on interpreting the EEG and MEG signals, we will do a EEG data acquisition demonstration (you can try it yourself), will look at the typical artifacts to consider in the data and we will look at preprocessing. On Wednesday afternoon we will look at spectral analysis, source reconstruction, measures of connectivity and network analysis. Both days will comprise a combination of short lectures and hands-on MATLAB exercises on a tutorial dataset.
+
+In the second week of the DCBT school, participants carry out a short project. We will have time to provide feedback on the projects and to address follow up questions resulting from the projects.
+
 _We will keep this page up to date and post new information here when available._
 
 ## The data used in this tutorial
