--- a/workshop/bcbt2022.md
+++ b/workshop/bcbt2022.md
@@ -49,7 +49,7 @@ The recorded brain activity includes visual, orthographic, and auditory activity
 ## Getting started with the hands-on session
 
 {% include markup/danger %}
-Please download and unzip a recent version of FieldTrip from <https://github.com/fieldtrip/fieldtrip/releases>. We will be using some cutting edge features in FieldTrip, so you should download and install release [20210928](https://github.com/fieldtrip/fieldtrip/releases/tag/20210928) or later.
+Please download and unzip a recent version of FieldTrip from <https://github.com/fieldtrip/fieldtrip/releases>. We will be using some cutting edge features in FieldTrip, so you should download and install release [20220819](http://github.com/fieldtrip/fieldtrip/releases/tag/20220819) or later.
 {% include markup/end %}
 
 To get going, you need to start MATLAB. Then, you need to issue the following commands:
