fixed messy news item

--- a/_posts/2022-11-26-release.md
+++ b/_posts/2022-11-26-release.md
@@ -1,57 +1,9 @@
 ---
 title: 26 November 2022 - FieldTrip version 20221126 has been released
 categories: [release]
-tweet: FieldTrip version 20221126 was just released. See http://www.fieldtriptoolbox.org/#26-november-2022
+tweet: FieldTrip version 20221126 was just released with official support for NIRS in data2bids and improvements for parsing HED tags. See http://www.fieldtriptoolbox.org/#26-november-2022
 ---
 
 ### 26 November, 2022
 
-FieldTrip version [20221126](http://github.com/fieldtrip/fieldtrip/releases/tag/20221126) has been released.
-See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20221121...20221126) for the detailed list of updates.
-
-#### Commits
-
-- [50aaae7](http://github.com/fieldtrip/fieldtrip/commit/50aaae7) Merge commit '61c22bb' into release
-- [61c22bb](http://github.com/fieldtrip/fieldtrip/commit/61c22bb) FIX - regression error in data2bids due to NIRS in #2140 the question in #2144 has not yet been taken into account
-- [1dcf582](http://github.com/fieldtrip/fieldtrip/commit/1dcf582) ENH #2138 - renamed test_issue2138.m to inspect_issue2138.m to prevent automatic execution, the web service is not always available and that would be flagged as a regression error
-- [5a64a55](http://github.com/fieldtrip/fieldtrip/commit/5a64a55) automatically synchronized identical files to 1af788875c886092f8cd29f65c1b1f8fab9892c1
-- [1af7888](http://github.com/fieldtrip/fieldtrip/commit/1af7888) Merge pull request #2139 from robertoostenveld/issue2138
-- [2a595ae](http://github.com/fieldtrip/fieldtrip/commit/2a595ae) FIX - don't copy unit from coordsystem_json in case it is empty, see #2140
-- [856871b](http://github.com/fieldtrip/fieldtrip/commit/856871b) Merge pull request #2140 from helenacockx/nirs2bids
-- [65ef759](http://github.com/fieldtrip/fieldtrip/commit/65ef759) remove fields with values of 0 from structure
-- [8d02fde](http://github.com/fieldtrip/fieldtrip/commit/8d02fde) change order of the columns in channels.tsv
-- [76774a1](http://github.com/fieldtrip/fieldtrip/commit/76774a1) fix if wavelength contains nans
-- [5fb3f0f](http://github.com/fieldtrip/fieldtrip/commit/5fb3f0f) add motion and miscellaneous channels
-- [0ccb848](http://github.com/fieldtrip/fieldtrip/commit/0ccb848) fix if data contains non-nirs channels
-- [b8c7e6e](http://github.com/fieldtrip/fieldtrip/commit/b8c7e6e) corrected link to github repo
-- [89a707e](http://github.com/fieldtrip/fieldtrip/commit/89a707e) updated the use of hed_assemble, include in test script
-- [4631cdd](http://github.com/fieldtrip/fieldtrip/commit/4631cdd) add hed_assemble to external/hedtools
-- [c4476c1](http://github.com/fieldtrip/fieldtrip/commit/c4476c1) add external/hedtools
-- [7d92a14](http://github.com/fieldtrip/fieldtrip/commit/7d92a14) fixed conditional logic
-- [7c85f9b](http://github.com/fieldtrip/fieldtrip/commit/7c85f9b) added comment for users to change the code
-- [5a37552](http://github.com/fieldtrip/fieldtrip/commit/5a37552) demonstrate ft_redefinetrial and filtering continuous data
-- [9933290](http://github.com/fieldtrip/fieldtrip/commit/9933290) added ft_trialfun_hed
-- [06a675e](http://github.com/fieldtrip/fieldtrip/commit/06a675e) allow the specification of the file extension
-- [7ab4b04](http://github.com/fieldtrip/fieldtrip/commit/7ab4b04) improved test script
-- [e31b8a8](http://github.com/fieldtrip/fieldtrip/commit/e31b8a8) make consistent with BIDSVersion 1.8
-- [89cd863](http://github.com/fieldtrip/fieldtrip/commit/89cd863) fix mistake of merge conflict
-- [b1ca210](http://github.com/fieldtrip/fieldtrip/commit/b1ca210) Merge branch 'master' into nirs2bids
-- [36737b5](http://github.com/fieldtrip/fieldtrip/commit/36737b5) represent HED events in the output structure
-- [991f483](http://github.com/fieldtrip/fieldtrip/commit/991f483) added test script
-- [7ff42ba](http://github.com/fieldtrip/fieldtrip/commit/7ff42ba) do a sanity check on the number of trials
-- [f662e4d](http://github.com/fieldtrip/fieldtrip/commit/f662e4d) Merge branch 'master' of https://github.com/fieldtrip/fieldtrip
-- [4312a8b](http://github.com/fieldtrip/fieldtrip/commit/4312a8b) Merge branch 'master' of https://github.com/fieldtrip/fieldtrip
-- [3d45b4b](http://github.com/fieldtrip/fieldtrip/commit/3d45b4b) change back to original status
-- [1ad47cc](http://github.com/fieldtrip/fieldtrip/commit/1ad47cc) use source and detector label of snirf file
-- [692093e](http://github.com/fieldtrip/fieldtrip/commit/692093e) correctly converts BIDS back into FT structure
-- [291ed9b](http://github.com/fieldtrip/fieldtrip/commit/291ed9b) compulsory opto type was missing in optodes_tsv
-- [7506c1b](http://github.com/fieldtrip/fieldtrip/commit/7506c1b) use cfg.event instead of cfg.trigger to write data to snirf
-- [12d3067](http://github.com/fieldtrip/fieldtrip/commit/12d3067) do not count short channels as nirs channels
-- [f581797](http://github.com/fieldtrip/fieldtrip/commit/f581797) type of nirs channel depends on the type of measurement and should be provided by the user
-- [2cd4cef](http://github.com/fieldtrip/fieldtrip/commit/2cd4cef) make merging tables containing logicals possible
-- [2121686](http://github.com/fieldtrip/fieldtrip/commit/2121686) distinguish between nominal and actual wavelengths
-- [96a3e52](http://github.com/fieldtrip/fieldtrip/commit/96a3e52) Merge branch 'master' of https://github.com/fieldtrip/fieldtrip
-- [05c326b](http://github.com/fieldtrip/fieldtrip/commit/05c326b) Merge branch 'master' of https://github.com/fieldtrip/fieldtrip
-- [eeeccd9](http://github.com/fieldtrip/fieldtrip/commit/eeeccd9) Merge branch 'master' of https://github.com/fieldtrip/fieldtrip
-- [d5cdff2](http://github.com/fieldtrip/fieldtrip/commit/d5cdff2) Merge branch 'master' of https://github.com/fieldtrip/fieldtrip
-- [fa99492](http://github.com/fieldtrip/fieldtrip/commit/fa99492) functions to load mvnx data
+FieldTrip version [20221126](http://github.com/fieldtrip/fieldtrip/releases/tag/20221126) has been released. It includes full support for NIRS in data2bids according to BIDS release 1.8 thanks to [@helenacockx](https://github.com/helenacockx). Furthermore, it has improvements for parsing HED tags thanks to [@dungscout96](https://github.com/dungscout96), [@VisLab](https://github.com/VisLab), [@smakeig](https://github.com/smakeig), [@monique2208](https://github.com/monique2208) and [@deepagupta](https://github.com/deepagupta). See [GitHub](https://github.com/fieldtrip/fieldtrip/compare/20221121...20221126) for the detailed list of updates.
