update description and use of fiducials in line with https://github.com/fieldtrip/fieldtrip/issues/2159

--- a/workshop/baci2017.md
+++ b/workshop/baci2017.md
@@ -40,7 +40,7 @@ _We will start at 9:00 sharp and will finish around 17:30._
 To get going, you need to start MATLAB. Then, you need to issue the following command
 
     restoredefaultpath
-    cd path_to_fieldtrip
+    cd <path_to_fieldtrip>
     addpath(pwd)
     ft_defaults
 
