improved general formatting

--- a/development/meeting/20150413.md
+++ b/development/meeting/20150413.md
@@ -17,7 +17,7 @@ tags: [meeting]
 
 - Aarhus toolkit (Tz)
   - ERP, but especially time-frequency-analysis for EEG (separately acquired) as well as MEG data
-  - source-reconstruction for both TF data (beamformers) and evoked data
+  - source reconstruction for both TF data (beamformers) and evoked data
   - statistics (f.ex. cluster based permutation tests) for both signal and source data
   - possibilities of importing data (both signal and source) analyzed with other software to use statistical tools of FieldTrip
   - combination of EEG and MEG data (when acquired simultaneously)
