--- a/development/realtime/bci2000.md
+++ b/development/realtime/bci2000.md
@@ -1,11 +1,9 @@
 ---
-title: BCI2000
+title: Streaming realtime data from and to BCI2000
 tags: [realtime]
 ---
 
-# BCI2000
-
-## Introduction
+# Streaming realtime data from and to BCI2000
 
 [BCI2000](http://www.bci2000.org) is a general-purpose system for brain-computer interface (BCI) research. It can also be used for data acquisition, stimulus presentation, and brain monitoring applications.
 
